--- a/config.json
+++ b/config.json
@@ -5,6 +5,5 @@
     "prefix": "!",
     "token": "ODA4NDAwNTQzOTU3MjU0MTU1.YCF_rQ.FPLZp36Ya7svY2nQYQTU2LSC1FA",
     "shopifyUrl": "https://neon-proxies-llc.myshopify.com/admin/api/2021-01",
-    "XShopifyAccessToken": "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",
-    "test": 6197296103600
+    "XShopifyAccessToken": "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"
 }
